--- a/css/styles.css
+++ b/css/styles.css
@@ -629,11 +629,7 @@ footer {
 
 .projects-list-link {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    height 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .projects-list-link:hover,
@@ -691,6 +687,8 @@ footer {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn {
