--- a/css/styles.css
+++ b/css/styles.css
@@ -679,6 +679,10 @@ footer {
   pointer-events: none;
 }
 
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.3);
+}
+
 .modal {
   width: 528px;
   height: 580px;
@@ -686,9 +690,8 @@ footer {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform 250ms linear;
 }
 
 .modal-close-btn {
